[gd_scene load_steps=2 format=3 uid="uid://dssmxdudubtvm"]

[ext_resource type="Script" path="res://ui/ServerSelection.gd" id="1_reqno"]

[node name="ServerSelection" type="CanvasLayer"]
script = ExtResource("1_reqno")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control/MarginContainer"]
layout_mode = 2
color = Color(0.0705882, 0.0156863, 0.0117647, 1)

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_right = 300

[node name="ColorRect" type="ColorRect" parent="Control/MarginContainer/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.447059)

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="Header" type="MarginContainer" parent="Control/MarginContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Control/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.607843, 0.172549, 1)
theme_override_font_sizes/font_size = 28
text = "< Server login settings >
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="MarginContainer" parent="Control/MarginContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "⏣ Enter the IP and the Port of the dedicated server :"

[node name="GridContainer" type="GridContainer" parent="Control/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="Control/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "IP :"

[node name="IpField" type="LineEdit" parent="Control/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="Control/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Port :"

[node name="PortField" type="LineEdit" parent="Control/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ButtonsMenu" type="MarginContainer" parent="Control/MarginContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/ButtonsMenu"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/ButtonsMenu/VBoxContainer"]
layout_mode = 2
text = "⏣ Select the server to connect :"

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/ButtonsMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/ButtonsMenu/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="LocalHostBtn" type="Button" parent="Control/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/ButtonsMenu/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Local Host
"

[node name="DedicatedBtn" type="Button" parent="Control/MarginContainer/MarginContainer/MarginContainer/VBoxContainer/ButtonsMenu/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Dedicated Server
"
